--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html,
 body {
   height: 100%;
   width: 100%;
+  /* position: ; */
 }
 
 #main {
@@ -315,7 +316,7 @@ nav #btn1:hover {
   color: white;
 }
 
-#box4{
+#box4 {
   margin-top: 5rem;
   font-size: 1.4rem;
   border-top: 0.5px solid gray;
@@ -331,29 +332,29 @@ nav #btn1:hover {
   padding: 10px 20px;
 }
 
-#box5 .card1{
+#box5 .card1 {
   display: flex;
   flex: 1;
   flex-direction: column;
   gap: 1rem;
 }
 
-#box5 .card1 h3{
+#box5 .card1 h3 {
   font-size: 1.5rem;
   font-weight: 500;
 }
 
-#box5 .card1 p{
+#box5 .card1 p {
   font-size: 1rem;
   font-weight: 500;
 }
 
-#box5 .card1 i{
+#box5 .card1 i {
   font-size: 2.5rem;
   color: #2563eb;
 }
 
-#box6{
+#box6 {
   margin-top: 4rem;
   border-top: 0.5px solid gray;
   padding: 1.5rem 0;
@@ -368,7 +369,8 @@ nav #btn1:hover {
   padding: 3rem;
   display: flex;
 }
-#main3 #left{
+
+#main3 #left {
   width: 100%;
 }
 
@@ -396,6 +398,7 @@ nav #btn1:hover {
   background-color: #1e40af;
   transform: scale(1.05);
 }
+
 video::-webkit-media-controls {
   display: none !important;
 }
@@ -431,3 +434,111 @@ video::-webkit-media-controls {
   font-weight: 600;
 }
 
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(4px);
+  justify-content: center;
+  align-items: center;
+}
+
+#content1 {
+  background: #1a1f2c;
+  width: 800px;
+  height: 450px;
+  border-radius: 20px;
+  display: flex;
+  overflow: hidden;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
+}
+
+#left {
+  flex: 1;
+  background-color: #000;
+}
+
+#left img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#right1 {
+  flex: 1;
+  color: white;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#right1 h2 {
+  font-size: 1.8rem;
+  font-weight: 700;
+  color: #fff;
+}
+
+#right1 p {
+  color: #aaa;
+  margin-bottom: 1rem;
+}
+
+#right1 form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#right1 input {
+  padding: 12px 15px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  background: transparent;
+  color: white;
+}
+
+#right1 button {
+  background: #0d47a1;
+  border: none;
+  color: white;
+  padding: 12px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.3s;
+}
+#button:hover {
+  background-color: #223a56;
+}
+
+.options {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 0.9rem;
+  color: #bbb;
+}
+
+.options a {
+  color: #64b5f6;
+  text-decoration: none;
+}
+
+.close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 2rem;
+  color: white;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.close:hover {
+  color: #ff5252;
+}
