--- a/style.css
+++ b/style.css
@@ -314,6 +314,7 @@ nav #btn1:hover {
   width: 40%;
   background-color: #2563eb;
   color: white;
+  border: none;
 }
 
 #box4 {
@@ -539,6 +540,80 @@ video::-webkit-media-controls {
   cursor: pointer;
   transition: 0.3s;
 }
+
 .close:hover {
   color: #ff5252;
 }
+
+#ContactPage{
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  background: rgba(0,0,0,0.7);
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(4px);
+}
+
+
+#content2 {
+  width: 900px;
+  background: white;
+  border-radius: 20px;
+  display: flex;
+  padding: 40px;
+  position: relative;
+}
+
+#leftBox {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+  padding: 10px ;
+}
+
+#leftBox p{
+  font-size: 1.05rem;
+}
+
+#leftBox h1 {
+  font-size: 2.7rem;
+  margin: 10px 0;
+}
+
+#rightBox {
+  flex: 1;
+}
+
+#rightBox form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+#rightBox input,
+#rightBox select,
+#rightBox textarea {
+  padding: 12px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  width: 100%;
+  font-size: 1rem;
+}
+
+#rightBox button {
+  padding: 12px;
+  background: #2563eb;
+  border: none;
+  color: white;
+  border-radius: 8px;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
